--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,4 +79,8 @@ body {
   .teal-gradient {
     background: linear-gradient(45deg, hsl(177, 68%, 41%), hsl(177, 80%, 60%));
   }
+
+  .bg-dark-teal {
+      background-color: hsl(180, 56%, 23%);
+  }
 }
