--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,4 +83,13 @@ body {
   .bg-dark-teal {
       background-color: hsl(180, 56%, 23%);
   }
+
+  .marquee {
+    animation: marquee 30s linear infinite;
+  }
+
+  @keyframes marquee {
+    0% { transform: translateX(0%); }
+    100% { transform: translateX(-50%); }
+  }
 }
