--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,21 +13,19 @@ body {
     --foreground: 222.2 84% 4.9%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-    --primary: 34 100% 42%; /* #d58000 */
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --primary: 220 9% 46%; /* #6d737e */
+    --primary-foreground: 210 40% 98%;
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
-    --accent: 21 86% 57%; /* #DE8244 */
-    --accent-foreground: 210 40% 98%;
+    --accent: 157 58% 60%; /* #4ad999 */
+    --accent-foreground: 222.2 47.4% 11.2%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
-    --ring: 34 100% 42%;
+    --ring: 157 58% 60%;
     --radius: 0.5rem;
   }
  
@@ -38,19 +36,19 @@ body {
     --card-foreground: 210 40% 98%;
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
-    --primary: 34 100% 42%;
-    --primary-foreground: 222.2 47.4% 11.2%;
+    --primary: 220 9% 46%;
+    --primary-foreground: 210 40% 98%;
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
-    --accent: 21 86% 57%;
-    --accent-foreground: 210 40% 98%;
+    --accent: 157 58% 60%;
+    --accent-foreground: 222.2 47.4% 11.2%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
-    --ring: 34 100% 42%;
+    --ring: 157 58% 60%;
   }
 }
  
